# germi

./: .fallowrc.json  .gitattributes  .gitignore  .oxfmtrc.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
.claude/: README.md
.claude/agents/: architect.md  code-reviewer.md  implementor.md  orchestrator.md  qa-validator.md  tester.md
.claude/commands/: build-feature.md
.claude/skills/browser-testing/: SKILL.md
.claude/skills/verify/: SKILL.md
.githooks/: pre-commit
.github/workflows/: build.yml  portable-windows.yml
crates/proxy-core/: Cargo.toml
crates/proxy-core/examples/: standalone.rs
crates/proxy-core/src/: body.rs  ca.rs  flow.rs  handler.rs  har_export.rs  history.rs  http_semantics.rs  import.rs  lib.rs  reissue.rs  rules.rs  rules_export.rs  scripting.rs  session.rs  settings.rs  settings_io.rs  shared.rs  store.rs  tester.rs
src/: App.tsx  announce.test.ts  announce.ts  appState.ts  autoresponderState.test.ts  autoresponderState.ts  availability.test.ts  availability.ts  captureDrop.test.tsx  captureDrop.ts  columns.test.ts  columns.ts  compareKeys.test.ts  compareKeys.ts  comparePane.test.ts  comparePane.ts  compareWindow.ts  curl.test.ts  curl.ts  diff.test.ts  diff.ts  dnd.test.ts  dnd.ts  editorFlushRegistry.test.ts  editorFlushRegistry.ts  filter.test.ts  filter.ts  flowFixtures.ts  flowUrl.test.ts  flowUrl.ts  focusMockBody.ts  hotkey.test.ts  hotkey.ts  inspectorFind.test.ts  inspectorFind.ts  ipc.ts  latestSaveQueue.test.ts  latestSaveQueue.ts  localStore.ts  main.tsx  (+58 more)
src-tauri/: Cargo.toml  germi.desktop  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  indicator.rs  instance.rs  lib.rs  main.rs  persist.rs  portal_hotkey.rs  rule_store.rs  state.rs  system_proxy.rs
src/components/: AppearanceSettings.test.tsx  AppearanceSettings.tsx  AutoresponderMultiSelect.test.tsx  AutoresponderPanel.tsx  AutoresponderScenarioTabs.test.tsx  BodyEditor.tsx  CaDialog.tsx  CaptureDropOverlay.test.tsx  CaptureDropOverlay.tsx  ColumnsSettings.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CompareDiff.tsx  CompareGutter.test.tsx  CompareGutter.tsx  ComparePane.test.tsx  ComparePane.tsx  CompareView.tsx  CompareWindow.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DiffView.test.tsx  DiffView.tsx  FilterChips.test.tsx  FilterChips.tsx  FilterHelp.tsx  FiltersPanel.test.tsx  FiltersPanel.tsx  FlowInspector.tsx  HistoryControls.tsx  MatchRail.test.tsx  MatchRail.tsx  MaximizedOverlay.tsx  NotificationHistoryDialog.test.tsx  NotificationHistoryDialog.tsx  RuleDetailWindow.tsx  RuleListItem.test.tsx  RuleTester.test.tsx  (+27 more)
src/components/ui/: Button.test.tsx  Button.tsx  Chip.test.tsx  Chip.tsx  FilterChip.test.tsx  FilterChip.tsx  IconButton.test.tsx  IconButton.tsx  Modal.test.tsx  Modal.tsx  SegmentedControl.test.tsx  SegmentedControl.tsx  screenshotFont.ts
