[workspace]
resolver = "2"
members = ["crates/proxy-core", "src-tauri"]

# proxy-core is kept deliberately free of any GUI/webkit dependency so it can be
# built, tested and run as a standalone proxy without the desktop shell:
#   cargo build  -p proxy-core
#   cargo test   -p proxy-core
#   cargo run    -p proxy-core --example standalone

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.82"

# Clippy's default lint groups (correctness, suspicious, style, complexity, perf).
# Members opt in with `[lints]\nworkspace = true`. Levels are "warn" here so local
# `cargo clippy` stays non-blocking; CI enforces them hard via `-- -D warnings`.
[workspace.lints.clippy]
all = "warn"
