[workspace]
resolver = "2"
members = ["crates/proxy-core", "src-tauri"]

# proxy-core is kept deliberately free of any GUI/webkit dependency so it can be
# built, tested and run as a standalone proxy without the desktop shell:
#   cargo build  -p proxy-core
#   cargo test   -p proxy-core
#   cargo run    -p proxy-core --example standalone

[workspace.package]
edition = "2021"
license = "0BSD"
rust-version = "1.82"

# Lints are enforced repo-wide: every member opts in with `[lints] workspace = true`.
# Levels are "deny" so they hard-fail locally too (CI also passes `-- -D warnings`).
# Groups carry priority = -1 so the specific `allow`s below take precedence.
[workspace.lints.rust]
warnings = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Pedantic lints we deliberately keep off, and why:
missing_errors_doc = "allow"                 # internal API, not a published library
missing_panics_doc = "allow"                 # ditto
must_use_candidate = "allow"                 # too noisy to tag every getter in an app
needless_pass_by_value = "allow"             # Tauri commands receive owned, deserialized args
redundant_closure_for_method_calls = "allow" # `|s| s.to_string()` beats `ToString::to_string`
cast_possible_truncation = "allow"           # intentional Duration/f64-ms → u64 casts
cast_sign_loss = "allow"                      # ditto
