[package]
name = "germi"
version = "0.1.0"
description = "Germi — a custom, scriptable HTTP/S debugging proxy"
authors = ["Germi"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
# The desktop entry point lives in the lib so it can be shared with a future
# mobile target; main.rs just calls `germi_lib::run()`.
name = "germi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = [] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-dialog = "=2.7.1"

proxy-core = { path = "../crates/proxy-core" }

serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync", "time", "macros"] }
sysproxy = "=0.3.0"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[features]
# this feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
