[package]
name = "germi"
version = "0.1.0"
description = "Germi — a custom, scriptable HTTP/S debugging proxy"
authors = ["Germi"]
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
# The desktop entry point lives in the lib so it can be shared with a future
# mobile target; main.rs just calls `germi_lib::run()`.
name = "germi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.3", features = [] }
tauri-plugin-opener = "=2.5.4"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-global-shortcut = "=2.3.2"
tauri-plugin-notification = "=2.3.3"

proxy-core = { path = "../crates/proxy-core" }

serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
rusqlite = { version = "=0.40.1", features = ["bundled"] }
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync", "time", "macros"] }
sysproxy = "=0.3.0"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

# Wayland global shortcuts go through the XDG GlobalShortcuts portal (the X11
# grabs the global-shortcut plugin uses don't fire on Wayland). Linux-only.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "=0.13.11", default-features = false, features = ["tokio", "global_shortcuts"] }
futures-util = "=0.3.31"

[features]
# this feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
