[package]
name = "proxy-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Standalone MITM HTTP/S proxy engine for Germi: capture, rules and auto-respond."

[lints]
workspace = true

[dependencies]
# The MITM proxy engine. Default features already include rcgen-ca, rustls-client
# and decoder, which is everything we need for HTTP/1.1 + TLS interception.
# HTTP/2 is intentionally left off for the MVP (simpler, more robust ALPN: every
# connection negotiates http/1.1). Flip on the "http2" feature in phase 2.
hudsucker = "=0.24.1"

tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time"] }
http-body-util = "=0.1.3"
bytes = "=1.12.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
regex = "=1.12.4"
anyhow = "=1.0.102"
tracing = "=0.1.44"
mime_guess = "=2.0.5"
base64 = "=0.22.1"

# Archive import (SAZ): unzip + raw HTTP parsing + body decode.
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
httparse = "=1.10.1"
flate2 = "=1.1.9"
brotli = "=8.0.4"

[dev-dependencies]
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

# A standalone binary you can run WITHOUT the Tauri shell:
#   cargo run -p proxy-core --example standalone
[[example]]
name = "standalone"
