[package]
name = "proxy-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Standalone MITM HTTP/S proxy engine for Germi: capture, rules and auto-respond."

[lints]
workspace = true

[dependencies]
# The MITM proxy engine. Default features already include rcgen-ca, rustls-client
# and decoder, which is everything we need for HTTP/1.1 + TLS interception.
# HTTP/2 is intentionally left off for the MVP (simpler, more robust ALPN: every
# connection negotiates http/1.1). Flip on the "http2" feature in phase 2.
hudsucker = "=0.24.1"

tokio = { version = "=1.52.3", features = ["rt-multi-thread", "sync", "macros", "net", "signal", "time"] }
http-body-util = "=0.1.3"
bytes = "=1.12.0"

# Outbound client for re-issuing a captured request (doc public-availability
# check; seed of a future repeater). All three are already in the tree via
# hudsucker, reusing the same aws-lc-rs rustls provider the proxy installs.
hyper = { version = "=1.10.1", features = ["client", "http1"] }
hyper-util = { version = "=0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "=0.27.9", default-features = false, features = ["http1", "webpki-roots", "webpki-tokio"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
regex = "=1.12.4"
anyhow = "=1.0.102"
tracing = "=0.1.44"
mime_guess = "=2.0.5"
base64 = "=0.22.1"

# Sandboxed, pure-Rust scripting for user-authored request/response hooks. The
# "sync" feature makes Engine/AST Send+Sync so a compiled script can be shared
# across the proxy's worker threads and run inside the async handler.
rhai = { version = "=1.25.1", features = ["sync"] }

# Archive import (SAZ): unzip + raw HTTP parsing + body decode.
zip = { version = "=8.6.0", default-features = false, features = ["deflate"] }
httparse = "=1.10.1"
flate2 = "=1.1.9"
brotli = "=8.0.4"

[dev-dependencies]
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

# A standalone binary you can run WITHOUT the Tauri shell:
#   cargo run -p proxy-core --example standalone
[[example]]
name = "standalone"
